--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,17 +7,13 @@ env:
   DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
 
 jobs:
-  linux:
+  appimage:
     strategy:
       matrix:
-        compiler: [clang_aot]
+        compiler: [clang_appimage]
         platform: [
-          {os: ubuntu-24.04, path: x64}
+          {os: ubuntu-22.04, name: x64, script: Linux/appimage/appimage.sh}
         ]
-        include:
-          - compiler: clang_aot
-            make_flags: "USE_AOT=true"
-      fail-fast: false
     runs-on: ${{ matrix.platform.os }}
 
     steps:
@@ -34,22 +30,19 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update -qy
-          sudo apt-get install -qy libsdl2-dev ccache # The compilers are already installed on GitHub's runners.
+          sudo apt-get install -qy libsdl2-dev libfuse2 ccache # The compilers are already installed on GitHub's runners.
 
       - name: Setup CCache
         uses: ./.github/actions/setup-ccache-action
-       
+
       - name: Write commit SHA1 to file
         uses: ./.github/actions/build-sha1-action
-        
-      # stderr is not detected as a TTY, so diagnostics are by default printed without colours;
-      # forcing colours makes the log a little nicer to read.
-      - name: Build Mesen
-        run: |
-          make -j$(nproc) -O ${{ matrix.make_flags }} LTO=true STATICLINK=true SYSTEM_LIBEVDEV=false
 
-      - name: Upload Mesen
+      - name: Build Mesen (AppImage)
+        run: |
+          ${{ matrix.platform.script }}
+      - name: Upload Mesen (AppImage)
         uses: actions/upload-artifact@v4
         with:
-          name: Mesen (Linux - ${{ matrix.platform.os }} - ${{ matrix.compiler }})
-          path: bin/linux-${{ matrix.platform.path }}/Release/linux-${{ matrix.platform.path }}/publish/Mesen
+          name: Mesen (Linux ${{ matrix.platform.name }} - AppImage)
+          path: Mesen.AppImage
